--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -57,6 +57,9 @@ env = HYPRCURSOR_SIZE,24
 ### LOOK AND FEEL ###
 #####################
 
+# Wallpaper
+preload = ~/.config/hypr/wallpaper.png
+
 # Refer to https://wiki.hyprland.org/Configuring/Variables/
 
 # https://wiki.hyprland.org/Configuring/Variables/#general
